# Scarlet-Engine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  GenerateProjectFiles.bat  GenerateProjectFiles.sh  README.md  appveyor.yml
GDMEngine/: CMakeLists.txt
GDMEngine/include/Renderer/: Renderer.h
GDMEngine/src/Renderer/: Renderer.cpp
ScarletEditor/: CMakeLists.txt
ScarletEditor/Sources/: EditorMain.cpp
ScarletEditor/Sources/AssetPanel/: CMakeLists.txt
ScarletEditor/Sources/AssetPanel/Private/: AssetPanel.cpp  AssetPanelViewItem.cpp  DirectoryAssetViewItem.cpp  DirectoryAssetViewItem.h  FileAssetViewItem.cpp  FileAssetViewItem.h
ScarletEditor/Sources/AssetPanel/Public/: AssetPanel.h  AssetPanelViewItem.h
ScarletEditor/Sources/AssetView/: CMakeLists.txt
ScarletEditor/Sources/AssetView/Private/: AssetView.cpp  AssetViewItem.cpp  DirectoryAssetViewItem.cpp  DirectoryAssetViewItem.h  FileAssetViewItem.cpp  FileAssetViewItem.h
ScarletEditor/Sources/AssetView/Public/: AssetView.h  AssetViewItem.h
ScarletEditor/Sources/Editor/: CMakeLists.txt
ScarletEditor/Sources/Editor/Private/: Editor.cpp  EditorUILayer.cpp  EditorViewport.cpp  PropertyEditor.cpp  Stats.cpp
ScarletEditor/Sources/Editor/Public/: Editor.h  EditorUILayer.h  EditorViewport.h  Stats.h
ScarletEditor/Sources/OutputLog/: CMakeLists.txt
ScarletEditor/Sources/OutputLog/Private/: OutputLog.cpp
ScarletEditor/Sources/OutputLog/Public/: OutputLog.h
ScarletEditor/Sources/PropertyEditor/: CMakeLists.txt
ScarletEditor/Sources/PropertyEditor/Private/: PropertyEditor.cpp
ScarletEditor/Sources/PropertyEditor/Public/: OutputLog.h  PropertyEditor.h
ScarletEditor/Sources/SceneGraph/: CMakeLists.txt
ScarletEditor/Sources/SceneGraph/Private/: SceneGraph.cpp  SceneGraphItem.cpp
ScarletEditor/Sources/SceneGraph/Public/: SceneGraph.h  SceneGraphItem.h
ScarletEditor/Sources/SceneHierarchy/: CMakeLists.txt
ScarletEditor/Sources/SceneHierarchy/Private/: SceneHierarchy.cpp  SceneHierarchyItem.cpp
ScarletEditor/Sources/SceneHierarchy/Public/: SceneHierarchy.h  SceneHierarchyItem.h
ScarletEditor/config/: default_imgui.ini
ScarletEditor/include/: Editor.h  EditorStyle.h  EditorUILayer.h
ScarletEditor/include/Panels/: EditorViewport.h  OutputLog.h  PropertyEditor.h  SceneHierarchy.h  Stats.h
ScarletEditor/include/Panels/SceneHierarchy/: SceneHierarchy.h  SceneHierarchyItem.h
ScarletEditor/src/: Editor.cpp  EditorMain.cpp  EditorStyle.cpp  EditorUILayer.cpp
ScarletEditor/src/Panels/: EditorViewport.cpp  OutputLog.cpp  PropertyEditor.cpp  SceneHierarchy.cpp  Stats.cpp
ScarletEditor/src/Panels/SceneHierarchy/: SceneHierarchy.cpp  SceneHierarchyItem.cpp
ScarletEngine/: CMakeLists.txt
ScarletEngine/Content/: GenericAsset.tga
ScarletEngine/Shaders/: compile_shaders.bat  frag.spv  test_shader.frag  test_shader.vert  test_vk_shader.frag  test_vk_shader.vert  vert.spv
ScarletEngine/Sources/Ac_Physics/: CMakeLists.txt
ScarletEngine/Sources/Ac_Physics/Private/: Ac_ColliderSystem.cpp  Ac_RigidBodySystem.cpp
ScarletEngine/Sources/Ac_Physics/Public/: Ac_ColliderComponent.h  Ac_ColliderSystem.h  Ac_Physics.h  Ac_RigidBodyComponent.h  Ac_RigidBodySystem.h
ScarletEngine/Sources/AchillesPhysics/: CMakeLists.txt  README.md
ScarletEngine/Sources/AchillesPhysics/Private/: ColliderSystem.cpp  FluidSystem.cpp  RigidBodySystem.cpp  SpringSystem.cpp
ScarletEngine/Sources/AchillesPhysics/Public/: AchillesCore.h  AchillesDemo.h  ColliderComponent.h  ColliderSystem.h  FluidComponent.h  FluidSystem.h  RigidBodyComponent.h  RigidBodySystem.h  SpringComponent.h  SpringSystem.h
ScarletEngine/Sources/AssetManager/: CMakeLists.txt
ScarletEngine/Sources/AssetManager/Private/: AssetHandle.cpp  AssetManager.cpp
ScarletEngine/Sources/AssetManager/Public/: AssetHandle.h  AssetManager.h  AssetTypes.h
ScarletEngine/Sources/Core/: CMakeLists.txt
ScarletEngine/Sources/Core/Private/: Archive.cpp  BinaryArchive.cpp  Camera.cpp  CorePCH.cpp  Engine.cpp  IModule.cpp  ITickable.cpp  InputManager.cpp  Logger.cpp  MemoryTracker.cpp  ModuleManager.cpp  TickableList.cpp
ScarletEngine/Sources/Core/Public/: Archive.h  BinaryArchive.h  Camera.h  Color.h  Core.h  CoreDefines.h  CoreMinimal.h  CorePCH.h  CoreSTL.h  CoreUtils.h  Event.h  (+9 more)
ScarletEngine/Sources/ECS/: CMakeLists.txt
ScarletEngine/Sources/Engine/: CMakeLists.txt
ScarletEngine/Sources/Gameplay/: CMakeLists.txt
ScarletEngine/Sources/OpenGLRAL/: CMakeLists.txt
ScarletEngine/Sources/RAL/: CMakeLists.txt
ScarletEngine/Sources/Renderer/: CMakeLists.txt
ScarletEngine/Sources/UI/: CMakeLists.txt
ScarletEngine/Sources/VulkanRAL/: CMakeLists.txt
ScarletEngine/Sources/Window/: CMakeLists.txt
ScarletEngine/include/: World.h
ScarletEngine/include/AssetManager/: AssetHandle.h  AssetManager.h
ScarletEngine/include/Core/: Archive.h  Camera.h  Color.h  Core.h  CoreMinimal.h  CorePCH.h  CoreSTL.h  CoreUtils.h  Delegate.h  Engine.h  Event.h  ITickable.h  Logger.h  Transform.h
ScarletEngine/include/ECS/: ECS.h  Entity.h  Registry.h  System.h  TypeInfo.h
ScarletEngine/include/OpenGLRAL/: OpenGLRAL.h  OpenGLResources.h
ScarletEngine/include/RAL/: RAL.h  RALResources.h
ScarletEngine/include/Renderer/: Renderer.h  Scene.h  SceneProxy.h  StaticMeshComponent.h  Viewport.h
ScarletEngine/include/UI/: CoreUIStyle.h  ImGuiUILayer.h  Style.h  UILayer.h  UIStyle.h  UIStyleRegistry.h  UISystem.h  UIWidget.h
ScarletEngine/shaders/: test_shader.frag
ScarletEngine/src/: World.cpp
ScarletEngine/src/AssetManager/: AssetHandle.cpp  AssetManager.cpp
ScarletEngine/src/Core/: Archive.cpp  Camera.cpp  CorePCH.cpp  Engine.cpp  GlobalAllocator.cpp  ITickable.cpp  Logger.cpp  MemoryTracker.cpp
ScarletEngine/src/ECS/: Registry.cpp
ScarletEngine/src/OpenGLRAL/: OpenGLRAL.cpp  OpenGLResources.cpp
ScarletEngine/src/RAL/: RAL.cpp
ScarletEngine/src/Renderer/: Renderer.cpp  SceneProxy.cpp  Viewport.cpp
ScarletEngine/src/UI/: CoreUIStyle.cpp  ImGuiUILayer.cpp  Style.cpp  UILayer.cpp  UIStyle.cpp  UIStyleRegistry.cpp  UISystem.cpp  UIWidget.cpp  UIWindow.cpp
(+115 files in other folders)
